DT-741 fixes a number of border and spacing issue in the single select

--- a/src/client/components/atoms/multiselect/multiselect.scss
+++ b/src/client/components/atoms/multiselect/multiselect.scss
@@ -1,52 +1,45 @@
-.redBorder{
-    border  : 1px solid #E21C3D;
-}
-
-
-.innerContainer{
+.innerContainer {
     position: relative;
 }
 
-.myselect{
-    // @include font-size($paragraph-font-sizes);
-    // -webkit-appearance: none;
-    // -moz-appearance: none;
-    // appearance: none;
-    // border: 1px solid $grey;
-    // border-radius: 0;
-    // height: 48px;
-    // background: url("../../../../../public/assets/svg/chevron.svg") no-repeat 95% 50%;
-    // padding-left: 14px;
+.myselect {
+    border: none;
+    color: #1C2E36;
 }
 
-.myselect::-ms-expand { /* for IE 11 */
+.myselect::-ms-expand {
+    /* for IE 11 */
     display: none;
 }
 
-.myoption{
+.myoption {
     @include font-size($paragraph-font-sizes);
     border: 1px solid $grey;
     border-radius: 0;
 }
 
-.validationIcon{
+.validationIcon {
     right: 30px;
 }
-
 
 .has-success .label {
     border: 1px solid #3c763d;
 }
 
 .myselect :global(.Select-control) {
-    border-radius: 0px !important;
+    border-radius: 0px;
     border: 1px solid #666666;
     height: 48px;
 }
 
+.redBorder :global(.Select-control) {
+    border-color: $crimson;
+}
+
 .myselect :global(.Select-control:focus) {
     outline: none !important;
-    border: 1px solid #609F00 !important;
+    border: 1px solid $grey !important;
+    border-radius: 0px;
     box-shadow: none !important;
 }
 
@@ -58,17 +51,17 @@
 }
 
 .myselect :global(.Select-value) {
-    border: 1px solid #666666 !important;
-    // background-color: #EBEBEB !important;
-    border-radius: 5px !important;
-    color: #333333 !important;
+    
+}
 
+.myselect:global(.Select--multi) :global(.Select-value){
+    background-color: $grey-lighter;
+    border: 1px solid #666666 !important;
+    color: #333333 !important;
 }
 
 .myselect :global(.Select-value-icon) {
     border-right: 1px solid #666666 !important;
-    border-bottom-left-radius: 5px !important;
-    border-top-left-radius: 5px !important;
 }
 
 .myselect :global(.Select-value-icon:hover) {
@@ -77,33 +70,47 @@
     color: #333333 !important;
 }
 
-.myselect :global(.is-focused) :global(.Select-control) {
-    border: 1px solid #609F00;
-}
+// .myselect :global(.is-focused) :global(.Select-control) {
+//     border: 0px solid #609F00;
+// }
 
-.myselect :global(.is-focused) :global(.Select-menu-outer) {
-    border: 1px solid #609F00;
+.myselect :global(.Select-menu-outer) {
+    border-width: 1px;
     border-top: none;
     border-radius: 0;
 }
 
-.myselect :global(.Select-input):hover {
-    background: red;
+.myselect :global(.Select-menu-outer) div:hover {
+    background-color: $grey-lighter;
 }
 
-.myselect :global(.Select-option) :global(.is-focused) {
-    background-color: #EBEBEB;
+.myselect :global(.Select-option):global(.is-focused) {
+    background-color: inherit;
 }
 
-.myselect :global(.is-focused):not(.is-open)>:global(.Select-control) {
-    border: 1px solid #609F00;
-    box-shadow: none;
-}
+// .myselect :global(.is-focused):not(.is-open)>:global(.Select-control) {
+//     border: 1px solid #609F00;
+//     box-shadow: none;
+// }
 
-.myselect :global(.Select-input) input[role="combobox"]{
+@include  border-color-theme('.myselect :global(.Select-menu-outer)');
+@include  border-color-theme('.myselect:global(.is-open) :global(.Select-control)');
+
+
+
+
+.myselect :global(.Select-input) input[role="combobox"] {
     border: 0px;
 }
 
-.myselect :global(.Select-arrow-zone) i{
+.myselect :global(.Select-arrow-zone) i {
     width: 100%;
+}
+
+.myselect:global(.Select--single) :global(.Select-clear-zone) {
+    width: 0px;
+}
+
+.myselect :global(.Select-control) :global(.Select-value){
+    top: 5px;
 }
